<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    android:gravity="center"
    android:padding="5dp"
    android:orientation="vertical"
    android:background="@color/liteRed"
    tools:context=".MainActivity">
    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
     <androidx.cardview.widget.CardView
        android:clickable="true"
        android:layout_margin="5dp"
        android:id="@+id/idDailyMedicine"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
      <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/colorAccent"
            android:padding="10dp"
            android:src="@drawable/daily_medicine" />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Large"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option1"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/colorAccent"
            />
        </LinearLayout>
     </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:clickable="true"
            android:layout_margin="5dp"
            android:id="@+id/idVitals"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/materialPink"
                    android:padding="10dp"
                    android:src="@drawable/vitals" />

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option2"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/materialPink"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.cardview.widget.CardView
            android:clickable="true"
            android:layout_margin="5dp"
            android:id="@+id/idReminders"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/colorAccent"
                    android:padding="10dp"
                    android:src="@drawable/reminder" />

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option3"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/colorAccent"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:clickable="true"
            android:layout_margin="5dp"
            android:id="@+id/idHealthHistory"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/materialPink"
                    android:padding="10dp"
                    android:src="@drawable/health_history" />

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option4"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/materialPink"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.cardview.widget.CardView
            android:clickable="true"
            android:layout_margin="5dp"
            android:id="@+id/idAppoinments"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/colorAccent"
                    android:padding="10dp"
                    android:src="@drawable/appoinment" />

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option5"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/colorAccent"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:clickable="true"
            android:layout_margin="5dp"
            android:id="@+id/idRMedicines"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/materialPink"
                    android:padding="10dp"
                    android:src="@drawable/r_medicine" />

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option6"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/materialPink"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:layout_weight=".5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.cardview.widget.CardView
            android:clickable="true"
            android:layout_margin="5dp"
            android:id="@+id/idLocation"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@color/colorAccent"
                    android:padding="10dp"
                    android:src="@drawable/location" />

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option7"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/colorAccent"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>